--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,126 @@
-div {
-  background-color: aquamarine;
-  filter: drop-shadow(2px 2px solid red);
+html {
+  box-sizing: border-box;
+  font-size: calc(1em + 1vw);
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.result {
+  width: 100%;
+  background: linear-gradient(180deg, hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+  border-radius: 0 0 20px 20px;
+
+  text-align: center;
+  box-sizing: border-box;
+  padding: 20px 10%;
+
+  position: relative;
+  z-index: 1;
+}
+
+h2 {
+  color: rgb(207, 203, 203);
+  font-weight: bold;
+  font-size: calc(0.6em + 1vw);
+}
+
+.score {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  max-width: 20vw;
+  min-width: 75px;
+  aspect-ratio: 1;
+  overflow: hidden;
+  background: linear-gradient(
+    180deg,
+    hsla(256, 72%, 46%, 1),
+    hsla(241, 72%, 46%, 0)
+  );
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.cal {
+  font-size: 2em;
+  font-size: calc(2em + 4vw);
+  color: white;
+  font-weight: 700;
+}
+
+.score span:last-child {
+  display: block;
+  font-size: calc(0.8em + 0.5vw);
+  color: grey;
+  font-weight: 600;
+}
+
+p[class="p 1"] {
+  color: white;
+  font-size: calc(1em + 1vw);
+  font-weight: 600;
+}
+
+p[class="p 2"] {
+  color: hsl(0, 3%, 66%);
+  font-size: calc(0.7em + 1vw);
+}
+
+.summary {
+  position: relative;
+  top: -30px;
+  /* padding-top: 40px; */
+  background-color: white;
+  padding: 40px 10% 20px;
+}
+
+.summary h2 {
+  color: black;
+}
+
+.summary ul {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.summary ul li {
+  box-sizing: border-box;
+  list-style: none;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 0 15px;
+  border-radius: 10px;
+}
+
+.uno {
+  color: hsl(0, 100%, 67%);
+  font-weight: 600;
+  background-color: hsla(0, 100%, 67%, 0.07);
+}
+
+.uno p:first-child {
+  padding-left: 1.4rem;
+  background-image: url(/0429-desafios/desafio-2/assets/images/icon-reaction.svg);
+  background-size: 1.2em 1.2em;
+  background-repeat: no-repeat;
+}
+
+.uno :last-child :first-child {
+  color: black;
+}
+
+.uno :last-child :last-child {
+  color: rgb(135, 135, 135);
+}
+
+.uno p {
+  margin: 10px 0;
 }
