--- a/css/styles.css
+++ b/css/styles.css
@@ -72,14 +72,17 @@ p[class="p 2"] {
 }
 
 .summary {
+  box-sizing: border-box;
   position: relative;
   top: -30px;
   /* padding-top: 40px; */
   background-color: white;
+  width: 100%;
   padding: 40px 10% 20px;
 }
 
 .summary h2 {
+  font-size: calc(1em + 1vw);
   color: black;
 }
 
@@ -87,7 +90,7 @@ p[class="p 2"] {
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
 }
 
 .summary ul li {
@@ -96,13 +99,18 @@ p[class="p 2"] {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  padding: 0 15px;
   border-radius: 10px;
+  font-weight: 600;
+  padding: 10px;
+}
+
+.summary ul li > * {
+  margin: 0;
+  font-size: calc(0.7em + 1vw);
 }
 
 .uno {
   color: hsl(0, 100%, 67%);
-  font-weight: 600;
   background-color: hsla(0, 100%, 67%, 0.07);
 }
 
@@ -113,14 +121,45 @@ p[class="p 2"] {
   background-repeat: no-repeat;
 }
 
-.uno :last-child :first-child {
+.dos {
+  color: hsl(39, 100%, 56%);
+  background-color: hsla(39, 100%, 56%, 0.07);
+}
+
+.dos p:first-child {
+  padding-left: 1.4rem;
+  background-image: url(/0429-desafios/desafio-2/assets/images/icon-reaction.svg);
+  background-size: 1.2em 1.2em;
+  background-repeat: no-repeat;
+}
+
+.tres {
+  color: hsl(166, 100%, 37%);
+  background-color: hsla(166, 100%, 37%, 0.07);
+}
+
+.tres p:first-child {
+  padding-left: 1.4rem;
+  background-image: url(/0429-desafios/desafio-2/assets/images/icon-reaction.svg);
+  background-size: 1.2em 1.2em;
+  background-repeat: no-repeat;
+}
+.cuatro {
+  color: hsl(234, 85%, 45%);
+  background-color: hsla(234, 85%, 45%, 0.07);
+}
+
+.cuatro p:first-child {
+  padding-left: 1.4rem;
+  background-image: url(/0429-desafios/desafio-2/assets/images/icon-reaction.svg);
+  background-size: 1.2em 1.2em;
+  background-repeat: no-repeat;
+}
+
+.summary .primero {
   color: black;
 }
 
-.uno :last-child :last-child {
+.summary .segundo {
   color: rgb(135, 135, 135);
-}
-
-.uno p {
-  margin: 10px 0;
 }
