--- a/css/styles.css
+++ b/css/styles.css
@@ -8,33 +8,34 @@ body {
   margin: 0;
 }
 
+.content {
+  min-width: 375px;
+}
+
 .result {
-  width: 100%;
   background: linear-gradient(180deg, hsl(252, 100%, 67%), hsl(241, 81%, 54%));
   border-radius: 0 0 20px 20px;
-
   text-align: center;
   box-sizing: border-box;
   padding: 20px 10%;
-
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 
 h2 {
   color: rgb(207, 203, 203);
   font-weight: bold;
-  font-size: calc(0.6em + 1vw);
+  font-size: calc(0.9em + 1vw);
 }
 
 .score {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   margin: auto;
-  max-width: 20vw;
-  min-width: 75px;
+  max-width: 35%;
+  min-width: 100px;
   aspect-ratio: 1;
   overflow: hidden;
   background: linear-gradient(
@@ -116,9 +117,10 @@ p[class="p 2"] {
 
 .uno p:first-child {
   padding-left: 1.4rem;
-  background-image: url(/0429-desafios/desafio-2/assets/images/icon-reaction.svg);
+  background-image: url(../assets/images/icon-reaction.svg);
   background-size: 1.2em 1.2em;
   background-repeat: no-repeat;
+  background-position: left;
 }
 
 .dos {
@@ -128,7 +130,7 @@ p[class="p 2"] {
 
 .dos p:first-child {
   padding-left: 1.4rem;
-  background-image: url(/0429-desafios/desafio-2/assets/images/icon-reaction.svg);
+  background-image: url(../assets/images/icon-memory.svg);
   background-size: 1.2em 1.2em;
   background-repeat: no-repeat;
 }
@@ -140,7 +142,7 @@ p[class="p 2"] {
 
 .tres p:first-child {
   padding-left: 1.4rem;
-  background-image: url(/0429-desafios/desafio-2/assets/images/icon-reaction.svg);
+  background-image: url(../assets/images/icon-verbal.svg);
   background-size: 1.2em 1.2em;
   background-repeat: no-repeat;
 }
@@ -151,7 +153,7 @@ p[class="p 2"] {
 
 .cuatro p:first-child {
   padding-left: 1.4rem;
-  background-image: url(/0429-desafios/desafio-2/assets/images/icon-reaction.svg);
+  background-image: url(../assets/images/icon-visual.svg);
   background-size: 1.2em 1.2em;
   background-repeat: no-repeat;
 }
